# autosetip

./: .gitignore  CMakeLists.txt  README  aliyun.cpp  encode.h  main.cpp
